# NetworkEmulator

./: .gitignore  CLAUDE.md  CMakeLists.txt
src/: main.cpp  test_main.cpp
src/gui/: DeviceItem.cpp  DeviceItem.h  LinkItem.cpp  LinkItem.h  MainWindow.cpp  MainWindow.h  NetworkCanvas.cpp  NetworkCanvas.h
src/gui/dialogs/: HubDialog.cpp  HubDialog.h  PCDialog.cpp  PCDialog.h  RouterDialog.cpp  RouterDialog.h  SwitchDialog.cpp  SwitchDialog.h
src/models/: Device.cpp  Device.h  Link.cpp  Link.h  Network.cpp  Network.h
src/routing/: OSPF.cpp  OSPF.h  PIMDenseMode.cpp  PIMDenseMode.h  RIPv2.cpp  RIPv2.h  RoutingEngine.cpp  RoutingEngine.h  StaticRouting.cpp  StaticRouting.h
src/utils/: IpUtils.h
src/validation/: Validator.cpp  Validator.h
